[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nodemon"]

# [tool.hatch.metadata]
# allow-direct-references = true

[project]
name = "nodemon"
version = "0.1.1"
authors = [
    { name="Ian Harcombe", email="ian.harcombe@gmail.com" },
]
description = "A simple drag and drop application to help visualise various graph algorithms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ttkbootstrap>=1.14.0",
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]

[project.urls]
Homepage = "https://github.com/MrHarcombe/NodeDemonstrator"
Issues = "https://github.com/MrHarcombe/NodeDemonstrator/issues"
